# wizardbattle

./: CMakeLists.txt  README.md
assets/shaders/: default.frag
docs/superpowers/plans/: 2026-05-08-wizardbattle-plan.md
docs/superpowers/specs/: 2026-05-08-wizardbattle-design.md
scripts/: download_assets.sh
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Game.cpp  Game.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/entity/: Collision.cpp  Collision.h  Components.cpp  Components.h  GameObject.cpp  GameObject.h
src/mob/: Archer.cpp  Archer.h  Dragon.cpp  Dragon.h  Goblin.cpp  Goblin.h  MobAI.cpp  MobAI.h  Ogre.cpp  Ogre.h  Spawner.cpp  Spawner.h
src/player/: Progression.cpp  Progression.h  Spell.cpp  Spell.h  SpellBook.cpp  SpellBook.h  Wizard.cpp  Wizard.h
src/ui/: DamageNumbers.cpp  DamageNumbers.h  HUD.cpp  HUD.h
src/world/: ForestMap.cpp  ForestMap.h  Terrain.cpp  Terrain.h
